--- a/install.plist
+++ b/install.plist
@@ -9,7 +9,7 @@
 				<key>kind</key>
 				<string>software-package</string>
 				<key>url</key>
-				<string>https://yuenan8.oss-cn-beijing.aliyuncs.com/ios/biyingcaipiao.ipa</string>
+				<string>https://github.com/jackHappyDev/xx/blob/master/123.ipa</string>
 			</dict>
 			<dict>
 				<key>kind</key>
